# 13_reveler_inegalites_cinema

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  allocine_matches.csv  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.yaml  pyproject.toml  test.http
.github/workflows/: deploy.yml  frontend-checks.yml  pre-commit.yaml
airbyte_dbt/: README.md
airbyte_dbt/dbt/: dbt_project.yml
backend/: Dockerfile  Dockerfile.prod  README.md  entrypoint-development.sh  entrypoint-production.sh  entrypoint.sh  main.py
backend/constants/: festival_award_constants.csv  festival_constants.py  role_constants.py
backend/entities/: credit_holder_entity.py  festival_award_entity.py  film_entity.py  poster_entity.py  trailer_entity.py
backend/repositories/: award_nomination_repository.py  country_repository.py  credit_holder_repository.py  festival_award_repository.py  festival_repository.py  film_country_budget_allocation_repository.py  film_credit_repository.py  film_repository.py  genre_repository.py  poster_character_repository.py  poster_repository.py  (+3 more)
certbot/: Dockerfile  entrypoint.sh
data_extraction/: 1_parsing_dataset_festival.ipynb  2_parsing_dataset_cheffes_postes.ipynb  3_insert_tmdb_data.ipynb  4_parse_dataset_cnc.ipynb  5_parse_dataset_cesars.ipynb  parse_dataset_cnc.ipynb  parse_dataset_cnc.py
database/: 0_init_database.sql  1_insert_festivals.sql  2_insert_realisateurs.sql  PythonDockerfile  README.md  alembic.ini  database.py  exploration.ipynb  getdata.py  insert_film_awards.py  matching.py  seed.py
docs/: DOCUMENTATION_GUIDELINES.md  repo-documentation-guidelines.md  repo-setup.md  setup.md
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  README.md  index.html  next.config.ts  package.json  pnpm-lock.yaml
ingestion/: .env.example  README.md  docker-compose.yml
ml-image/: .gitignore  Dockerfile  README.md  faces_clustering.py  main.py  main_v2.py  ml_pipeline_doc.md  predictions_on_posters.csv  predictions_on_trailers.csv  requirements.txt  requirements_windows.txt  visionmodel.py  visionmodel_v2.py
nginx/: Dockerfile  entrypoint.sh  prod.conf
(+264 files in other folders)
